feat: add editPost API (#45)
* feat: add editPost api

* chore: add swagger for editPost api

* chore: remove empty line
